fix hover project not visible bug

--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
     --void-transparent: rgba(33,32,34),0.4;
     --void-shade: rgb(12,11,13);
     --void-shade-transparent: rgba(12,11,13,0.4);
-    --edge: rgb(55,54,56);
+    --edge: rgb(60,59,61);
     --white: rgb(210,209,211);
     --grey: rgba(200,200,220,0.4)
 }
